logo location + smaller button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-float">
     <div class="row">
       <h1>Noam Purim Spiel 5781 / 2021</h1>
     </div>
@@ -45,7 +45,7 @@
   <script>
     var handler = StripeCheckout.configure({
       key: 'pk_test_HHN5WYd7as5jsa6j3ogVjww1',
-      image: 'noam_logo.png',
+      image: 'noam-purim-spiel-2021/noam_logo.png',
       token: function (token) {
         // Use the token to create the charge with a server-side script.
         // You can access the token ID with `token.id`
